change menu positioning to fixed & move hamburger btn behind

--- a/src/components/UI/HamburgerButton.module.css
+++ b/src/components/UI/HamburgerButton.module.css
@@ -9,7 +9,7 @@
   cursor: pointer;
   background-color: unset;
   border: unset;
-  z-index: 10;
+  z-index: 7;
   position: sticky;
   top: 2rem;
   left: 0;
